--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -1,7 +1,7 @@
 name: Build and deploy a container to an Azure Container App
 
 env:
-  AZURE_WEBAPP_NAME: MY_WEBAPP_NAME   # set this to your application's name
+  AZURE_WEBAPP_NAME: co2_backend
 
 on:
   push:
